--- a/WD/table.html
+++ b/WD/table.html
@@ -55,7 +55,7 @@
 			<td>IPDC (3160003)<br>(ABP)</td>
 			<td>TOC (3160704)<br>(MHV)</td>
 			<td>AJP (3160707)<br>(VAR)</td>
-			<td rowspan="2">B1 <br> TOC <br>(ABP)</td>
+			<td rowspan="2">B1 <br> TOC (3160704)<br>(ABP)</td>
 		</tr>
 
 		<tr>
@@ -76,7 +76,7 @@
 			<td>WP (3160713)<br>(JBB)</td>
 			<td>IOT (3160716)<br>(VRP)</td>
 			<td>TOC (3160704)<br>(MHV)</td>
-			<td rowspan="2">B2 <br> TOC <br>(ABP)</td>
+			<td rowspan="2">B2 <br> TOC (3160704)<br>(ABP)</td>
 		</tr>
 
 		<tr>
