--- a/WD/ce_dept.html
+++ b/WD/ce_dept.html
@@ -71,7 +71,7 @@
 				</li>
 
 				<li>
-					<a href="https://ronaksirwani.github.io/learningWD/WD/table.html" target="_blank">
+					<a href="table.html" target="_blank">
 						Time Table
 					</a> 
 				</li>
