--- a/WD/ce_dept.html
+++ b/WD/ce_dept.html
@@ -30,6 +30,12 @@
 			a{
 				text-decoration: none;
 			}
+			
+			footer{
+				position: fixed;
+				left: 0;
+				border: 0;
+			}
 
 		</style>
 
