--- a/WD/faculty.html
+++ b/WD/faculty.html
@@ -39,7 +39,7 @@
 
 	<section>
 		<div id=jbb>
-			<img src="https://gecmodasa.ac.in/assets/data/faculty/JBB.jpg" alt="professor pic">
+			<img src="JBB.jpg" alt="professor pic">
 			<p>
 				Name  : Prof. Jwalant Baria<br><br>
 				Designation	:	Assistant Professor<br><br>
@@ -53,7 +53,7 @@
 		</div>
 
 		<div id=akd>
-			<img src="https://gecmodasa.ac.in/assets/data/faculty/AKD.jpg" alt="professor pic">
+			<img src="AKD.jpg" alt="professor pic">
 			<p>
 				Name  : Prof. Dodiya Aniruddhsinh Karshanbhai<br><br>
 				Designation	:	Assistant Professor<br><br>
@@ -66,7 +66,7 @@
 		</div>
 
 		<div id=mmg>
-			<img src="https://gecmodasa.ac.in/assets/data/faculty/MMG.jpg" alt="professor pic">
+			<img src="MMG.jpg" alt="professor pic">
 			<p>
 				Name  : Dr. Mahesh M. Goyani<br><br>
 				Designation	:	Assistant Professor<br><br>
@@ -80,7 +80,7 @@
 		</div>
 
 		<div id=abp>
-			<img src="https://gecmodasa.ac.in/assets/data/faculty/CE_ABP.jpg" alt="professor pic">
+			<img src="CE_ABP.jpg" alt="professor pic">
 			<p>
 				Name  : Prof. Amit Bhupendrabhai Parmar<br><br>
 				Designation	:	Assistant Professor<br><br>
