--- a/module_3/index.html
+++ b/module_3/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width initial-scale=1">
 	<title>module-3</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\john_wick\learningWD\css\module_3_style.css">
-	<link rel="stylesheet" type="text/css" href="C:\Users\john_wick\learningWD\css\bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="learningWD/css/module_3_style.css">
+	<link rel="stylesheet" type="text/css" href="learningWD/css/bootstrap.min.css">
 </head>
 <body>	
 	<header>
@@ -105,8 +105,7 @@
 		
 	</div>
 
-	<script type="text/javascript" src="C:\Users\john_wick\learningWD\js\jquery-3.5.1.min.js"></script>
-	<script type="text/javascript" src="C:\Users\john_wick\learningWD\js\bootstrap.min.js"></script>
-	<script type="text/javascript" src="C:\Users\john_wick\learningWD\js\try3.js"></script> 
+	<script type="text/javascript" src="learningWD/js/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="learningWD/js/bootstrap.min.js"></script>
 </body>
 </html>
